--- a/hand_landmarker.ipynb
+++ b/hand_landmarker.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "TUfAcER1oUS6"
       },
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "gxbHBsF-8Y_l"
       },
@@ -94,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "cellView": "form",
         "id": "s3E6NFV-00Qt"
@@ -106,6 +106,7 @@
         "from mediapipe import solutions\n",
         "from mediapipe.framework.formats import landmark_pb2\n",
         "import numpy as np\n",
+        "import cv2\n",
         "\n",
         "MARGIN = 10  # pixels\n",
         "FONT_SIZE = 1\n",
@@ -162,19 +163,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "tzXuqyIBlXer"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
+        }
+      ],
       "source": [
         "!wget -q -O image.jpg https://storage.googleapis.com/mediapipe-tasks/hand_landmarker/woman_hands.jpg\n",
         "\n",
         "import cv2\n",
-        "from google.colab.patches import cv2_imshow\n",
+        "#from google.colab.patches import cv2_imshow\n",
         "\n",
         "img = cv2.imread(\"image.jpg\")\n",
-        "cv2_imshow(img)"
+        "# Window name in which image is displayed \n",
+        "window_name = 'image'\n",
+        "  \n",
+        "# Using cv2.imshow() method \n",
+        "# Displaying the image \n",
+        "cv2.imshow(window_name, img) \n",
+        "  \n",
+        "# waits for user to press any key \n",
+        "# (this is necessary to avoid Python kernel form crashing) \n",
+        "cv2.waitKey(0) \n",
+        "  \n",
+        "# closing all open windows \n",
+        "cv2.destroyAllWindows() "
       ]
     },
     {
@@ -282,7 +304,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
